# resnet-cifar10

./: .gitignore  Makefile  README.md  RESNET_REFACTOR.md  checkpoint.pth  config.py  dataset.py  logger.py  model.py  pyproject.toml  requirements.txt  resnet.py  train.py  trainer.py
.github/workflows/: ci.yml
configs/: resnet20.yaml  resnet32.yaml  resnet56.yaml
scripts/: evaluate.py  multi_seed.py  plot_curves.py  train.py
src/resnet_cifar10/: __init__.py  config.py  dataset.py  logger.py  model.py  provenance.py  train.py  trainer.py
src/resnet_cifar10/utils/: seeding.py
tests/: test_checkpoint.py  test_config.py  test_dataset.py  test_model.py  test_training.py
